@@ -1,21 +1,42 @@
+/*!
+ * \file 
+ * \brief Polynomial routines test program
+ * \author Tony Ottosson and Adam Piatyszek
+ *
+ * $Date$
+ * $Revision$
+ *
+ * -------------------------------------------------------------------------
+ *
+ * IT++ - C++ library of mathematical, signal processing, speech processing,
+ *        and communications classes and functions
+ *
+ * Copyright (C) 1995-2005  (see AUTHORS file for a list of contributors)
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
+ *
+ * -------------------------------------------------------------------------
+ */
+
 #include <itpp/itbase.h>
 
-using std::cout;
-using std::endl;
-using std::complex;
 using namespace itpp;
+using namespace std;
 
-#ifdef NO_LAPACK
-#define __THIS_PROGRAM_WILL_NOT_RUN__
-#endif
 
-#ifdef NO_CBLAS
-#define __THIS_PROGRAM_WILL_NOT_RUN__
-#endif
-
-#ifdef __THIS_PROGRAM_WILL_NOT_RUN__
-int main() { cout << "LAPACK and CBLAS (or MKL) are needed for this test program" << endl; }
-#else
+#if defined(HAVE_LAPACK) || defined(HAVE_MKL)
 
 int main()
 {
@@ -69,7 +90,13 @@ int main()
   }
 
   return 0;
+}
 
+#else
+
+int main() { 
+  cerr << "Error: LAPACK (or MKL) is needed for this test program" << endl; 
+  return 1;
 }
 
 #endif
