@@ -1,10 +1,43 @@
-#include <iostream>
+/*!
+ * \file 
+ * \brief Signal processing routines test program
+ * \author Tony Ottosson, Thomas Eriksson, Pal Frenger, Tobias Ringstrom 
+ *         and Adam Piatyszek
+ *
+ * $Date$
+ * $Revision$
+ *
+ * -------------------------------------------------------------------------
+ *
+ * IT++ - C++ library of mathematical, signal processing, speech processing,
+ *        and communications classes and functions
+ *
+ * Copyright (C) 1995-2005  (see AUTHORS file for a list of contributors)
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
+ *
+ * -------------------------------------------------------------------------
+ */
+
 #include <itpp/itbase.h>
 
-using std::cout;
-using std::endl;
-
 using namespace itpp;
+using namespace std;
+
+
+#if defined(HAVE_FFTW) || defined(HAVE_MKL)
 
 int main()
 {
@@ -59,3 +92,12 @@ int main()
 
   return 0;
 }
+
+#else
+
+int main() { 
+  cerr << "Error: FFTW (or MKL) is needed for this test program" << endl; 
+  return 1;
+}
+
+#endif
