@@ -1,11 +1,11 @@
 ========================
    Test of Transforms   
 ========================
-Real vector: fft_real(x,y), ifft(y,z)
+Real vector: fft_real(x,y), ifft_real(y,z)
 x = [1.45728 -1.13848 1.12252 0.937431 0.308753 1.30289 -0.505866 0.746416 -0.697447 1.02252 0.432204 0.563233 0.917611 -0.403519 0.457302 1.28131]
 y = [7.80417+0i 1.31178-0.0887597i -0.811778-0.512662i 1.59405+2.87097i 0.480037+2.74498i 0.377024+3.70282i -0.121277+2.69392i 5.33606-1.69234i -0.819442-0i 5.33606+1.69234i -0.121277-2.69392i 0.377024-3.70282i 0.480037-2.74498i 1.59405-2.87097i -0.811778+0.512662i 1.31178+0.0887597i]
 z = [1.45728 -1.13848 1.12252 0.937431 0.308753 1.30289 -0.505866 0.746416 -0.697447 1.02252 0.432204 0.563233 0.917611 -0.403519 0.457302 1.28131]
-Complex vector: fft_real(x,y), ifft(y,z)
+Complex vector: fft(x,y), ifft(y,z)
 x = [-1.95974-1.08227i -1.05337+0.397129i 0.370509-0.639193i 0.507353+0.0595547i -0.0758261-0.157134i -0.483975+0.158727i -0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i]
 y = [-5.1384-2.86385i -1.58685-0.784517i -4.54897-3.86661i -2.83319-0.373931i -0.216805-1.70364i 3.22383+2.92036i -2.5332-0.158073i 1.55884-1.92336i -0.00818703-2.72014i -0.478203-1.32i -1.45205+0.576104i -1.07464-1.88716i -5.02737+2.65431i -5.94326-4.84721i -3.00317+1.1881i -2.29422-2.20675i]
 z = [-1.95974-1.08227i -1.05337+0.397129i 0.370509-0.639193i 0.507353+0.0595547i -0.0758261-0.157134i -0.483975+0.158727i -0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i]
